# football_etl_pipeline

./: .gitignore  DATA_DICTIONARY.md  README.md  debug_db.py  extract_sample.py  main.py  pyproject.toml  reprocess.py
analysis/: player_heatmap.py  shot_map.py
db/: database.py
db/models/: bronze_models.py  gold_models.py  silver_models.py
football_web/: DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.yml
football_web/backend/: .env.example  alembic.ini  requirements.txt
football_web/backend/alembic/: env.py
football_web/backend/alembic/versions/: 0001_create_users_table.py
football_web/backend/app/: main.py
football_web/backend/app/api/: analytics.py  dashboard.py  pipeline.py
football_web/backend/app/auth/: router.py  schemas.py  service.py
football_web/backend/app/core/: config.py  dependencies.py  middleware.py  security.py
football_web/backend/app/models/: user.py
football_web/backend/tests/: conftest.py  test_auth.py
football_web/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
football_web/frontend/src/: App.tsx
football_web/frontend/src/components/: Navbar.tsx  PipelineRunner.tsx  ProtectedRoute.tsx
football_web/frontend/src/hooks/: useApi.ts  useAuth.tsx
football_web/frontend/src/modules/: ExportControlsModule.tsx  registry.ts  (+8 more)
football_web/nginx/: nginx.conf
tools/: prepare_match.py
transform/: bronze_to_silver.py  create_betting_facts.py  create_dim_date.py  create_powerbi_mart.py  create_team_matches_mart.py  silver_to_gold.py  sqlite_to_sqlserver.py
utils/: logger.py
(+4 files in other folders)
