[project]
name = "football-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mplcursors>=0.7",
    "mplsoccer>=1.6.1",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
]
